# dir-sweep

./: .gitignore  .travis.yml  LICENSE  README.md  brittany.yaml  cleanup.cabal  dir-sweep.cabal  generate-testfiles.hs
app/: CLI.hs  Main.hs
src/: Cleanup.hs  Messaging.hs  Sweep.hs  Util.hs
src/Cleanup/: CLI.hs  Files.hs  Messaging.hs  Options.hs  Time.hs  Util.hs
src/Sweep/: CLI.hs  Files.hs  Filter.hs  Messaging.hs  Options.hs  Time.hs
test/: FilterSpec.hs  UtilSpec.hs
