name:                cleanup
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cleanup#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Uhlenbruck (peuhlenb@gmail.com)
maintainer:          Peter Uhlenbruck (peuhlenb@gmail.com)
copyright:           2018 Peter Uhlenbruck
category:            Utility
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cleanup
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  other-modules:       Cleanup.Options
                     , Cleanup.Messaging
                     , Cleanup.Util

executable cleanup
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cleanup
                     , directory >= 1.2.5.0
                     , time
                     , optparse-applicative
                     , filepath
  default-language:    Haskell2010
  other-modules:       CLI

test-suite cleanup-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cleanup
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       UtilSpec

source-repository head
  type:     git
  location: https://github.com/githubuser/cleanup
