name:                dir-sweep
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dir-sweep#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Uhlenbruck (peuhlenb@gmail.com)
maintainer:          Peter Uhlenbruck (peuhlenb@gmail.com)
copyright:           2018 Peter Uhlenbruck
category:            Utility
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sweep
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.2.5 && < 2
                     , filepath
                     , optparse-applicative
                     , time
  default-language:    Haskell2010
  other-modules:       Sweep.CLI
                     , Sweep.Files
                     , Sweep.Messaging
                     , Sweep.Options
                     , Sweep.Time

executable dir-sweep
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dir-sweep
  default-language:    Haskell2010
  other-modules:       

test-suite dir-sweep-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dir-sweep
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       

source-repository head
  type:     git
  location: https://github.com/githubuser/dir-sweep
